--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,13 @@
       </a>
 
       <div class="trigger">
-        {% for page in site.pages %}
+        <a class="page-link" href="{{ site.baseurl }}about/">About</a>
+        <a class="page-link" href="{{ site.baseurl }}blog/">Blog</a>
+        <!-- {% for page in site.pages %}
           {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          <a class="page-link" href="{{ page.url }}">{{ page.title }}</a>
           {% endif %}
-        {% endfor %}
+        {% endfor %} -->
       </div>
     </nav>
 
