--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,13 @@
           <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
 
           <h2>
-            <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+            <a class="post-link" href="{{ post.url }}">{{ post.title }}</a>
           </h2>
         </li>
       {% endfor %}
     </ul>
+
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" }}">via RSS</a></p>
 
   </div>
 </div>
