--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,6 @@
-<!doctype html>
-<html lang="en">
 <head>
 
-  <title>{% if page.title %}{{ page.title }} &mdash;{% endif %} {{ site.name }}</title>
+  <title>{% if page.title %}{{ page.title }} &mdash;{% endif %} {{ site.title }}</title>
 
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -11,40 +9,30 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
   <!-- Facebook -->
-  <meta property="og:title" content="{% if page.title %}{{ page.title }} &mdash;{% endif %} {{ site.name }}"/>
+  <meta property="og:title" content="{% if page.title %}{{ page.title }} &mdash;{% endif %} {{ site.title }}"/>
   <meta property="og:site_name" content="{{ site.name }}"/>
   <meta property="og:url" content="{{ site.url }}{% if page.url != '/index.html' %}{{ page.url }}{% endif %}"/>
   <meta property="og:type" content="{% if page.layout == 'post' %}article{% else %}blog{% endif %}"/>
   <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}"/>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="{{ site.baseurl }}assets/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="{{ "/assets/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon" />
 
   <!-- Font -->
-  <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
 
   <!-- Feed -->
-  <!-- <link rel="alternate" type="application/rss+xml" href="{{ site.feedburnerurl }}"> -->
+  <link rel="alternate" type="application/rss+xml" href="{{ "/feed.xml" | prepend: site.baseurl }}" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}css/main.css" type="text/css" />
-  <!-- <link rel="stylesheet" href="{{ site.baseurl }}assets/css/normalize.css" type="text/css" /> -->
-  <!-- <link rel="stylesheet" href="{{ site.baseurl }}assets/css/main.css?v=3" type="text/css" /> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" type="text/css" />
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}" type="text/css" />
 
-  <!-- jQuery -->
-  <!-- <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js'></script> -->
-
-  <!-- Syntax Highlight -->
-  <!-- <link rel="stylesheet" type="text/css" href="http://media.zenorocha.com/pretiffy.css" />
-  <script src="http://media.zenorocha.com/pretiffy.js"></script>
-  <script src="http://media.zenorocha.com/pretiffy-lang-css.js"></script> -->
-
-  <!-- Main -->
-  <!-- <script src='{{ site.baseurl }}assets/js/main.js'></script> -->
-
-  <!-- Modernizr adding css classes -->
-  <!-- <script src='{{ site.baseurl }}assets/js/modernizr_css_classes.js'></script> -->
+  <!--[if lt IE 9]>
+    <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv-printshiv.min.js"></script>
+    <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
 </head>
-<body{% if page.class %} class="{{ page.class }}"{% endif %}>
-
