--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+
 {% include head.html %}
 
-{% include header.html %}
+<body>
+  
+  {% include nav.html %}
 
-<div class="page-content">
-  <div id="content" class="wrapper">
-    
-    {{ content }}
+  {{ content }}
 
-    <ul id="posts" class="post-list">
-      {% for post in site.posts %}
-        <li>
-          <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-
-          <h2>
-            <a class="post-link" href="{{ post.url }}">{{ post.title }}</a>
-          </h2>
-        </li>
-      {% endfor %}
-    </ul>
-
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" }}">via RSS</a></p>
-
-  </div>
-</div>
-
-{% include footer.html %}
-
+  {% include footer.html %}
+  
+</body>
