--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,17 +1,27 @@
-{% include head.html %}
+---
+layout: default
+---
 
-{% include header.html %}
+<header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ 'assets/img/bg-default.jpg' }}{% endif %}')">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="site-heading">
+                    <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
+                    <hr class="small">
+                    <span class="subheading">{{ page.description }}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
-<div class="page-content">
-  <div id="content" class="wrapper">
-  	
-  	{% if page.title %}
-      <h1 class="posttitle">{{ page.title }}</h1>
-    {% endif %}
-
-    {{ content }}
-
+<article>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+        {{ content }}
+      </div>
+    </div>
   </div>
-</div>
-
-{% include footer.html %}
+</article>
