--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,26 @@
 ---
-layout: default
+layout: page
 ---
-<div class="post">
+<div class="post-content">
+  {{ content }}
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+  <hr>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+  {% if page.previous.url ||  page.next.url %}
+  <ul class="pager">
+      
+    {% if page.previous.url %}
+    <li class="previous">
+        <a href="{{ site.baseurl }}/{{page.previous.url}}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">&larr; Previous Post</a> 
+    </li>
+    {% endif %} 
+    
+    {% if page.next.url %}
+    <li class="next">
+        <a href="{{ site.baseurl }}/{{page.next.url}}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Next Post &rarr;</a>
+    </li>
+    {% endif %} 
 
+  </ul>
+  {% endif %}
 </div>
