--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -88,9 +88,9 @@
 
 
 
-/**
- * Site footer
- */
+//
+// Site footer
+// 
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
