--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,6 @@
-/**
- * Site header
- */
+// 
+// Site header
+// 
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
