--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,6 +1,6 @@
-/**
- * Syntax highlighting styles
- */
+// 
+// Syntax highlighting styles
+// 
 .highlight {
     background: #fff;
     @extend %vertical-rhythm;
